--- a/example/index.html
+++ b/example/index.html
@@ -11,8 +11,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
-    <script src="test.js"></script>
+    <script src="../node_modules/html_basetest/index.js"></script>
+    <script src="example.js"></script>
+    <!-- Global/scss files -->
+    <link rel='stylesheet' href='https://dl.dropbox.com/s/tljrmo925z4jgdi/professional.css' type='text/css' />
     <link rel="stylesheet" href="" />
     <style>
         .purple {
@@ -22,7 +24,8 @@
     </style>
 </head>
 
-<body>
+<body class="p-6">
+    <h1>open console to see example results</h1>
     <div class="yonas purple" id="yon" disabled="false" data-problem_id="32">
         <div>baller</div>
         <div class="child">
